# statscpp

./: GETTING_STARTED.md  PIPELINE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
statscpp/: __init__.py  _version.py  api.py  armadillo.py  cache.py  compiler.py  core.py  marshal.py  parser.py  presets.py  types.py  wrapper.py
tests/: test_api.py  test_armadillo.py  test_parser.py  test_scpp.py  test_types.py
