[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statscpp"
version = "0.1.0"
description = "Write C++ statistical code in Python strings — compile and run it"
requires-python = ">=3.9"
dependencies = ["numpy"]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["statistics", "c++", "cpp", "compilation", "rcpp", "scientific-computing", "numerical"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage   = "https://github.com/dasdeva/statscpp"
Repository = "https://github.com/dasdeva/statscpp"
Issues     = "https://github.com/dasdeva/statscpp/issues"

[tool.setuptools.packages.find]
where   = ["."]
include = ["statscpp*"]
